Fixed issue where they'd be a scrollbar to.. nothing on mobile

--- a/app/assets/stylesheets/controllers/main.sass
+++ b/app/assets/stylesheets/controllers/main.sass
@@ -4,6 +4,7 @@ html
     body
         @import 'partials/splash'
         @import 'partials/dashboard/core'
+        overflow-y: hidden
         noscript
             @extend .abs-center
             color: #272727
@@ -24,7 +25,7 @@ html
                     text-decoration: underline
         bikboo-shell
             @import 'partials/navigation'
-            app-document-viewer, app-project-list, app-project-tile, app-project-viewer, app-project-overview
+            app-document-viewer, app-project-list, app-project-tile, app-project-viewer, app-project-overview, app-project-slide-editor, app-project-settings
                 display: block
             display: flex
             flex-direction: column
